--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,16 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div class="container">
     <h1>Pokemon Team</h1>
-    <a href="/pokemon/new"><button>Catch a new pokemon</button></a><br><br>
+    <a href="/pokemon/new"><button class="new"><img src="https://toppng.com/uploads/thumbnail/cartoon-pokeball-115485288676gmgx4y3xx.png" style="height: 30px;"> Catch a new pokemon <img src="https://toppng.com/uploads/thumbnail/cartoon-pokeball-115485288676gmgx4y3xx.png" style="height: 30px"></button></a><br><br>
+
     <% for(let i = 0; i < 6; i++) { %>
-        <h2><%=allPokemon[i].name %></h2><br>
-        <a href="/pokemon/<%= i %>"><img src="<%=allPokemon[i].img %>"></a><br>
+        <div class="pokedexpokemon">
+        <h2><%=allPokemon[i].name %></h2>
+        <a href="/pokemon/<%= i %>"><img class="pokemonteam" src="<%=allPokemon[i].img %>"></a><br>
         <form action="/pokemon/<%= i %>?_method=DELETE" method="POST">
-            <input type="submit" value="Send to Professor">
+            <input class="professor" type="submit" value="Send to Professor">
         </form>
+    </div>
     <% } %>
 
-
+    </div>
 </body>
 </html>
