--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,99 @@
+h1 {
+    font-family: 'VT323', monospace;
+    text-transform: uppercase;
+    font-size: 82px;
+    color: #6082bf;
+    margin: 0px;
+    padding: 10px;
+    letter-spacing: 5px;
+    font-weight: normal;
+}
+
+h2 {
+    font-family: 'VT323', monospace;
+    text-transform: uppercase;
+    font-size: 24px;
+    color: #d95856;
+    margin: 0px;
+    padding: 5px;
+    letter-spacing: 2px;
+    font-weight: normal;
+}
+
 .hide {
     display:none;
+}
+
+body {
+    background: #b04744 url("https://i.imgur.com/DpuFgPQ.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: bottom -150px center;
+    background-size: 80%;
+}
+
+.pokemonteam {
+    margin: 20px;
+    border: 20px solid white;
+    border-radius: 20px;
+    height: 100px;
+}
+
+.pokedexpokemon {
+    padding: 10px;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.new {
+    background-color: #fff;
+    padding: 10px;
+    margin: none;
+    border: none;
+    font-family: 'VT323', monospace;
+    font-weight: normal;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #6284c0;
+    border-radius: 20px;
+    font-size: 24px;
+}
+
+.new:hover {
+    background-color:#6082bf;
+    color: white;
+    cursor: pointer;
+}
+
+.professor {
+    background-color: #d95856;
+    padding: 15px;
+    margin: none;
+    border: none;
+    font-family: 'VT323', monospace;
+    font-weight: normal;
+    letter-spacing: 1px;
+    color: #fff;
+    border-radius: 20px;
+    font-size: 18px;
+}
+
+.professor:hover {
+    background-color: #fff;
+    color: #d95856;
+    cursor: pointer;
+}
+
+
+.container {
+    background-color: #e4eff7;
+    overflow: auto;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 50%;
+    text-align: center;
+    padding-bottom: 20px;
 }
