--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,6 +5,9 @@
   crossorigin="anonymous"></script>
   <script src="/static/app.js" defer></script>
   <link rel="stylesheet" href="/static/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
 <title>Pokedex</title>
 </head>
