--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body class="show">
     <h1>Change <%=pokemon.name; %>'s Nickname</h1>
     <% pokemon.img; %>
     <form action="/pokemon/<%= index %>?_method=PUT" method="POST">
-        Nickname: <input type="text" name="name" value="<%= pokemon.name %>"> <br>
+        Nickname: <input type="text" name="name" value="<%= pokemon.name %>"> <br><br>
         <!-- Hidden values so they don't disappear with the name update -->
         <input class="hide" type="text" name="img" value="<%= pokemon.img %>">
         <input class="hide" type="text" name="type" value="<%= pokemon.type %>">
@@ -19,7 +19,7 @@
         <input class="hide" type="text" name="stats[defense]" value="<%=pokemon.stats.defense %>">
         <!-- ----------------------------------------------------- -->
 
-        <input type="submit" value="Change Name">
+        <input class="new" type="submit" value="Change Name">
     </form>
 </body>
 </html>
