--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
     <h1>Pokemon Team</h1>
-    <a href="/pokemon/new"><button class="new"><img src="https://toppng.com/uploads/thumbnail/cartoon-pokeball-115485288676gmgx4y3xx.png" style="height: 30px;"> Catch a new pokemon <img src="https://toppng.com/uploads/thumbnail/cartoon-pokeball-115485288676gmgx4y3xx.png" style="height: 30px"></button></a><br><br>
+    <a href="/pokemon/new"><button class="new"><img src="https://i.imgur.com/V24VT4k.png" style="height: 30px;"> Catch a new pokemon <img src="https://i.imgur.com/V24VT4k.png" style="height: 30px"></button></a><br><br>
 
     <% for(let i = 0; i < 6; i++) { %>
         <div class="pokedexpokemon">
